Fix bugs with registration

--- a/Mappt/Base.lproj/Main.storyboard
+++ b/Mappt/Base.lproj/Main.storyboard
@@ -1686,7 +1686,7 @@
                                         <rect key="frame" x="8" y="96" width="343" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6SN-u1-EfC" userLabel="Confirm Password">
                                         <rect key="frame" x="8" y="134" width="343" height="30"/>
